<resources>
    <string name="app_name">sTour</string>
    <string name="home">Trang chủ</string>
    <string name="datcho">Bản đồ</string>
    <string name="info">Thông báo</string>
    <string name="account">...</string>
    <string name="more">Thêm</string>

    <string name="back"> Quay lại</string>

    <string name="single_routing">Thông thường</string>
    <string name="multi_routing">Định tuyến đa điểm</string>

    <string name="to">Chọn điểm đến</string>
    <string name="from">Chọn điểm đi</string>

    <string name="des">A Dreamhouse With a Prime Location -
        This vacation getaway is centrally located in an upscale neighborhood and is
        only a short drive from everything. Located on a large lot, this home has
        many great amenities to offer such as a game room with three game tables,
        open-beam vaulted ceilings, a unique kitchen, a spacious back deck with
        a propane BBQ and wireless internet.</string>
    <string name="rate1">4.3</string>

    <string name="reviews">Reviews</string>

    <string name="func1">Dẫn đường</string>

    <string name="func2">Du lịch thông minh</string>

    <string name="funct3">Di tích lịch sử</string>

    <string name="funct4">Văn hóa lễ hội</string>

    <string name="funct5">Văn hóa ẩm thực</string>
    <string name="great">Wonderful!</string>
    <string name="addr">Address</string>
    <string name="sdt">Phone</string>
    <string name="phone">84 912 636 939</string>
    <string name="exit_confirm">Ấn quay lại lần nữa để thoát ứng dụng</string>
    <string name="address">18 Phan Boi Chau | Hoan Kiem District, Ha Noi, Viet Nam</string>

    <string name="getnews">Đăng ký nhận bản tin</string>
    <string name="help">Trợ giúp</string>
    <string name="config">Cài đặt</string>
    <string name="view">10 Reviews</string>
    <string name="km">6,6 km</string>

    <string name="post">POSTCARD</string>
    <string name="bookmark">BOOKMARK</string>
    <string name="share">SHARE</string>

    <string name="nointernet">Không có kết nối internet!!!</string>
    <string name="ok">OK</string>

    <string name="vanhoa">Văn hóa ẩm thực</string>
    <string name="lehoi">Lễ hội văn hóa</string>
    <string name="ditich">Di tích lịch sử</string>

    <string name="hotel">Khách sạn</string>
    <string name="restaurant">Nhà hàng</string>

    <string name="rate">Rate this place</string>
    <string name="title_activity_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="str_rb_driving">Car</string>
    <string name="str_rb_bicycling">Bicycle</string>
    <string name="str_rb_walking">Walking</string>
    <string name="open">Open</string>
    <string name="open_default">8h00 - 17h30</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="backSymbol"><![CDATA[<]]></string>
    <string name="temp">Nhiệt độ (<sup>o</sup>C)</string>
    <string name="humi">Độ ẩm (%)</string>
    <string name="weather">Thời tiết</string>
    <string name="around_here">Quanh đây</string>

    <!--<string name="facebook_app_id">2162649873978145</string>-->
    <!--<string name="fb_login_protocol_scheme">fb2162649873978145</string>-->


</resources>
