<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_enable"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/weather"
            app:titleTextColor="@color/white"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="15dp"
        android:text="Thông tin thời tiết tỉnh Tuyên Quang"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/border_conner_image">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/temp"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="..."
                android:textSize="15sp"
                android:gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/border_conner_image">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/humi"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txtHumi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="..."
                android:textSize="15sp"
                android:gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>